--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,18 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/index.ts",
+            "src": "api/index.ts",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "src/index.ts"
+            "dest": "/api/index.ts"
         }
     ],
     "env": {
-        "MONGODB_URI": "@mongodb_uri"
+        "MONGODB_URI": "@mongodb_uri",
+        "MONGODB_DATABASE": "@mongodb_database"
     }
 }
