--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,24 @@
 {
     "version": 2,
     "bunVersion": "1.x",
-    "rewrites": [
+    "builds": [
         {
-            "source": "/",
-            "destination": "/api/index.ts"
+            "src": "api/**/*.ts",
+            "use": "@vercel/bun"
         },
         {
-            "source": "/(.*)",
-            "destination": "/api/index.ts"
+            "src": "public/**",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/favicon.ico",
+            "dest": "/public/favicon.ico"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.ts"
         }
     ]
 }
