--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
     "version": 2,
     "bunVersion": "1.x",
+    "functions": {
+        "api/index.ts": {
+            "runtime": "bun@1"
+        }
+    },
     "routes": [
         {
             "handle": "filesystem"
