--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,7 @@
-# Dependencies
 node_modules/
-bun.lockb
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Build outputs
 dist/
-build/
-*.tsbuildinfo
-
-# Logs
-logs/
+.env
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
 .DS_Store
-Thumbs.db
-
-# MongoDB
-data/
+.vercel
+bun.lockb
