--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
   "name": "football-championship-api",
   "version": "1.0.0",
-  "description": "Football Championship Management System API built with ElysiaJS and MongoDB",
+  "description": "Football Championship Management System API built with Express and MongoDB",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch src/app.ts",
-    "start": "bun src/app.ts",
-    "build": "bun build src/app.ts --outdir ./dist --target bun",
+    "dev": "nodemon --exec tsx src/app.ts",
+    "start": "node dist/app.js",
+    "build": "tsc",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f"
   },
   "keywords": [
-    "elysia",
+    "express",
     "mongodb",
     "football",
     "championship",
     "api",
-    "crud"
+    "crud",
+    "scalar"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "elysia": "^1.1.22",
-    "@elysiajs/swagger": "^1.1.5",
-    "@elysiajs/cors": "^1.1.1",
+    "@scalar/express-api-reference": "^0.3.41",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "mongodb": "^6.10.0"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
+    "@types/node": "^20.19.25",
+    "nodemon": "^3.1.11",
+    "tsx": "^4.20.6",
     "typescript": "^5.6.3"
   }
 }
