--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
     "version": 2,
-    "routes": [
+    "builds": [
         {
-            "handle": "filesystem"
-        },
+            "src": "api/index.ts",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
         {
             "src": "/(.*)",
             "dest": "/api/index.ts"
